--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,4 @@
-image: bradrydzewski/go:1.3
+image: docker.vokal.io/go1.4 
 script:
     - sudo apt-get update -qq
     - sudo apt-get -y install bzr mercurial python-pip
